# course-building-ai-llm-products-stepik-215591

./: README.md  pyproject.toml
l3_6/: __main__.py  client.py
l4_4/: __main__.py
